# graphql-codegen-rust

./: .codecov.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  audit.toml  cliff.toml  deny.toml  rust-toolchain.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
docs/: comparisons.md  configuration.md  contributing.md  examples.md  getting-started.md  integrations.md  reference.md
scripts/: release.sh  update_changelog.sh
src/: cli.rs  config.rs  generator.rs  integration.rs  introspection.rs  lib.rs  logger.rs  main.rs  parser.rs
src/generator/: diesel.rs  sea_orm.rs
tests/: cli_tests.rs  config_tests.rs  integration_tests.rs
tests/fixtures/: basic_schema.graphql  complex_schema.graphql
